test/libyul/yulSyntaxTests/push.yul
{ 0x42 }
// ----
// ParserError 6913: (7-8): Call or assignment expected.
